Feat: category list 조회 시 글 개수 포함